[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "main"
harness = false

[dependencies]
either = "1.8.1"
impl_ops = "0.1.1"
itertools = "0.10.5"

[dev-dependencies]
criterion = "0.4.0"
